# what_does_BERT_look_at

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_calc.sh
src/what_transformer_looked_at/: calculator.py  config.yaml  dataset.py  main.py  show_diff.py  util.py
src/what_transformer_looked_at/transformers/src/transformers/: modeling_bert.py
